Just a Couple Fixes

--- a/biosyncBand.html
+++ b/biosyncBand.html
@@ -54,13 +54,13 @@
                     <div class = "well well-md">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sem nisl, sollicitudin at maximus id, faucibus non arcu. Nunc eget cursus dui. Ut nisl ipsum, fringilla id purus non, auctor luctus lectus. Donec pellentesque ullamcorper lacus eget hendrerit. Aenean porta pharetra hendrerit. Nullam ac purus varius, tincidunt nisi at, blandit metus. Nullam dignissim finibus neque, eget cursus magna volutpat quis. Nullam lacinia blandit lorem at hendrerit. Maecenas laoreet, massa id porta imperdiet, leo mi tristique turpis, et viverra risus nisl non nisi. Integer rutrum, erat et suscipit gravida, quam risus consectetur mauris, accumsan congue lacus odio sed risus. Nam eros lectus, dictum id nisi in, posuere commodo libero. Sed ac augue non odio mattis dignissim.</p>
                         <p class = "text-muted"><a href = "mediTechBuy.html">Click here to fill out a contact form to obtain the BioSync Band!</a></p>
-                        <img class = "img-rounded" src = "CSS/patientMonitor.jpg" alt = "Heart and Blood Oxygen Monitor" height = "auto" width = "500vw">
+                        <img class = "img-responsive" class = "img-rounded" src = "CSS/patientMonitor.jpg" alt = "Heart and Blood Oxygen Monitor" height = "auto" width = "500vw">
                     </div>
                 </div>
     
     <footer class = "footer">
                 <div class = "container">
-                    <p class = "text-muted">Website Created and Curated By <mark>TCB Softworks</mark>.</p>
+                    <p class = "text-muted">Written by <strong>TCB Softworks</strong>. Powered by <strong>Boostrap</strong></p>
                 </div>
             </footer>
         </body>
