--- a/ecommerceLanding.html
+++ b/ecommerceLanding.html
@@ -57,7 +57,7 @@
     
     <footer class = "footer">
                 <div class = "container">
-                    <p class = "text-muted">Website Created and Curated By <mark>TCB Softworks</mark>.</p>
+                    <p class = "text-muted">Written by <strong>TCB Softworks</strong>. Powered by <strong>Boostrap</strong></p>
                 </div>
             </footer>
         </body>
