Added A Period Cause I'm not a barbarian.

--- a/ecommerceLanding.html
+++ b/ecommerceLanding.html
@@ -57,7 +57,7 @@
     
     <footer class = "footer">
                 <div class = "container">
-                    <p class = "text-muted">Written by <strong>TCB Softworks</strong>. Powered by <strong>Boostrap</strong></p>
+                    <p class = "text-muted">Written by <strong>TCB Softworks</strong>. Powered by <strong>Boostrap</strong>.</p>
                 </div>
             </footer>
         </body>
