--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Nam venenatis urna a quam laoreet, venenatis iaculis sapien scelerisque. Donec p
 
             <footer class = "footer">
                 <div class = "container">
-                    <p class = "text-muted">Written by <strong>TCB Softworks</strong>. Powered by <strong>Boostrap</strong></p>
+                    <p class = "text-muted">Written by <strong>TCB Softworks</strong>. Powered by <strong>Boostrap</strong>.</p>
                 </div>
             </footer> 
     </html>
