--- a/mediTechBuy.html
+++ b/mediTechBuy.html
@@ -52,7 +52,7 @@
 
             <div class = "container">
                 <h2 class = "page-header">Contact Form</h2>
-                <p class = "lead">Once you finish filling out this contact form, our outreach directors will work with your company to get you as many MeditTech products as you may need!</p>
+                <p class = "lead">Once you finish filling out this contact form, our outreach directors will work with your company to get you as many MediTech products as you may need!</p>
                 <p class = "text-muted">Please fill out the form completely and don't forget to specify the product(s) you're interested in.</p>
                 <form>
                     <div class = "form-group">
