Fixed Checkboxes -They looked really gross before. They now look less gross.

--- a/mediTechBuy.html
+++ b/mediTechBuy.html
@@ -78,10 +78,22 @@
                     </div>
                     <div class = "form-group">
                         <p><strong>What Products Are You Interested In?</strong></p>
-                        <label><input type = "checkbox"> BioSync Band </label>
-                        <label><input type = "checkbox"> A Fake Product </label>
-                        <label><input type = "checkbox"> Another Fake Product </label>
-                        <label><input type = "checkbox"> The Last Fake Product </label>
+                        <div class = "checkbox">
+                            <label><input type = "checkbox">BioSync Band </label>
+                        </div>
+
+                        <div class = "checkbox">
+                            <label><input type = "checkbox">A Fake Product </label>
+                            </div>
+
+                        <div class = "checkbox">
+                            <label><input type = "checkbox">Another Fake Product </label>
+                        </div>
+
+                        <div class = "checkbox">
+                            <label><input type = "checkbox">The Last Fake Product </label>
+                        </div>
+                        
                     </div> 
                         
                     <a href = "ecommerceLanding.html" class = "btn btn-default" role = "button">Submit</a>
