Caret Added -Cause those r cool

--- a/mediTechBuy.html
+++ b/mediTechBuy.html
@@ -38,7 +38,7 @@
                             <li class = "active"><a href = "mediTechBuy.html">Where to Buy</a></li>
 
                             <li class ="dropdown">
-                                <a class = "dropdown-toggle" href ="infasomAbout.html" data-toggle = "dropdown" role = "button" aria-expanded = "true">Our Products</a>
+                                <a class = "dropdown-toggle" href ="infasomAbout.html" data-toggle = "dropdown" role = "button" aria-expanded = "true">Our Products<span class = "caret"></span></a>
                                     <ul class = "dropdown-menu">
                                         <li><a href = "biosyncBand.html">BioSync Band</a></li>
                                     </ul>
